2019-09-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	address-book-config: Do not crash

	* src/address-book-config.c (edit_book_response): destroy the
	dialog as the last step; otherwise the struct is freed before we
	use it.

2019-08-25  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-print-object-text.c
	(balsa_print_object_text_calendar): Use ngettext() for plural
	forms of strings.

2019-08-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	imap-handle: Use modern macros to declare and define ImapMboxHandle

	* libbalsa/imap/imap-handle.c (imap_mbox_handle_init),
	(imap_mbox_handle_class_init), (imap_mbox_handle_new),
	(imap_mbox_handle_finalize):
	* libbalsa/imap/imap-handle.h:

2019-08-14  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-message: Use "balsa_message" consistntly as its
	identifier, and use "bm_" consistently as the prefix for static
	functions.

	* src/balsa-message.c (balsa_headers_attachments_popup),
	(bm_header_tl_buttons), (bm_on_set_style), (bm_find_set_status),
	(bm_find_scroll_to_rectangle), (bm_find_scroll_to_selection),
	(bm_find_cb), (bm_find_entry_changed_cb), (bm_find_again),
	(bm_find_bar_new), (bm_find_pass_to_entry),
	(bm_disable_find_entry), (balsa_message_init),
	(balsa_message_destroy), (balsa_message_new),
	(tree_activate_row_cb), (tree_mult_selection_popup),
	(tree_menu_popup_key_cb), (tree_button_press_cb), (bm_clear_tree),
	(balsa_message_set), (balsa_message_save_current_part),
	(bm_set_embedded_hdr), (balsa_message_set_displayed_headers),
	(balsa_message_set_wrap), (display_headers), (part_info_init),
	(atattchments_menu_cb), (add_to_attachments_popup),
	(toggle_all_inline_cb), (add_toggle_inline_menu_item),
	(display_part), (display_parts), (display_face), (display_content),
	(bm_next_part_info), (balsa_message_next_part),
	(balsa_message_has_next_part), (bm_previous_part_info),
	(balsa_message_previous_part), (balsa_message_has_previous_part),